--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   
-  <img src="./img/img.jpg" alt="">
+ 
 
 <div id="principal">
 
@@ -24,7 +24,7 @@
 
  
 
-  <table border="1" >
+  <table class="tabla" border="1" >
     <tr>
       <th colspan="6">REPORTE DE MANTENIMIENTO Y REVISIÓN</th>
   </tr>
@@ -260,7 +260,7 @@
 <h1>DanBombas Instalaciones</h1>
 
 <h2 class="titulos">NIT: 1022419268-8</h2>
-<table border="1">
+<table class="tabla" border="1">
   
     <tr>
       <th colspan="6">REPORTE DE MANTENIMIENTO Y REVISIÓN</th>
@@ -367,13 +367,13 @@
       <h2 class="titulos">INFORME TÉCNICO Y OBSERVACIONES</h2>
       <textarea id="tx" rows="10" cols="180"></textarea>
      <th><h3 class="titulos">Nombre del técnico
-
         <input type="text" id="tec"> </th></h3>
+        <h3 class="titulos">Correo: instalacionesdanbombas@gmail.com</h3>
+  <h3 class="titulos">Contacto: 3223138788 - 3204131947</h3>
       <script src="js/script.js"></script>
 </body>
 
-  <h3 class="titulos">Correo: instalacionesdanbombas@gmail.com</h3>
-  <h3 class="titulos">Contacto: 3223138788 - 3204131947</h3>
+  
 
 </div>
 </html>
